# OpenShell

./: Cargo.toml
crates/openshell-core/src/: config.rs
crates/openshell-driver-substrate/: Cargo.toml
crates/openshell-driver-substrate/tests/integration/: README.md  build-image.sh
crates/openshell-sandbox/src/: cli.rs  lib.rs  main.rs  process.rs
crates/openshell-sandbox/src/sandbox/linux/: landlock.rs  mod.rs
crates/openshell-server/: Cargo.toml
crates/openshell-server/src/: config_file.rs  lib.rs
crates/openshell-server/src/compute/: mod.rs
